# mouse-jiggler

./: .gitignore  README.md  boot.py  boot_out.txt  code.py  control.py  pyproject.toml  requirements.txt  taskfile.yml
.github/workflows/: build.yml  package.yml  test.yml  tests.yml
.run/: pytest.run.xml  tools.run.xml
lib/: gamepad.py  snes_ctrl.py
src/: boot.py  code.py  config.py  main.py  settings.toml
src/lib/: led.py  nvm.py  posiks.py  posix.py
tests/: conftest.py  test_SerialCommandHandler.py  test_async.py  test_boot.py  test_lib_led.py  test_lib_nvm.py  test_serial_command_handler.py  test_simple.py
tools/: __main__.py
