[project]
name = "mouse-jiggler"
version = "0.1.0"
description = "A USB HID device, that tickles your mouse, to make it jiggle jiggle"
requires-python = "==3.13.*"   # though circuitepython ~ python 3.4
dependencies = [
    "adafruit-circuitpython-asyncio>=3.0.3",
    "adafruit-circuitpython-ble>=10.1.0",
    "adafruit-circuitpython-hid>=6.1.8",
    "adafruit-circuitpython-neopixel>=6.3.21",
    "circuitpython-stubs>=10.0.3",
    "circuitpython-tool>=0.11.0",
    "circup>=2.3.0",
    "pyserial>=3.5",
]

[dependency-groups]
dev = [
    "docopt>=0.6.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.2.0",
    "ruff>=0.15.2",
]


[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["W293"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
junit_suite_name = "mouse-jiggler"

pythonpath = [
    "src"
]

testpaths = [
    "tests",
]

addopts = [
    "--tb=short",
    "--failed-first",
    "--doctest-modules",
    "--junitxml=reports/junit_test_report.xml",
    "--cov-report=term",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage/cov_html/",
    "--cov-report=xml:reports/coverage/coverage.xml",
    "--cov-report=annotate:reports/coverage/cov_annotate",
    "--cov=src/",
    "--cov-config=pyproject.toml",
    "--html=reports/test_report.html",
    "--self-contained-html",
    "-rsxXq",
    "-vv",
]

log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

doctest_encoding = "utf-8"
doctest_optionflags = [
    "ELLIPSIS",
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
    "ALLOW_BYTES",
]
